# cop

./: .gitignore  LICENSE  README.md  config.example.yaml  cop.service  pyproject.toml  requirements.txt  telegram-add.md
cop/: alerts.py  baseline.py  cli.py  config.py  health.py  main.py  ollama.py
cop/monitors/: auth.py  base.py  docker_.py  file.py  kernel.py  network.py  package.py  persistence.py  process.py  resource.py  tripwire.py
cop/sinks/: base.py  jsonlog.py  ntfy.py  telegram.py
tests/: test_alerts.py  test_baseline.py  test_monitors.py
