[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cop"
version = "0.1.0"
description = "Security monitoring daemon"
requires-python = ">=3.12"
dependencies = [
    "psutil>=6.0.0",
    "watchdog>=4.0.0",
    "docker>=7.0.0",
    "aiofiles>=23.2.1",
    "aiosqlite>=0.20.0",
    "aiohttp>=3.9.0",
    "PyYAML>=6.0.1",
    "click>=8.1.6",
    "python-telegram-bot>=20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
cop = "cop.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["cop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
